# generate-uuid-version

./: .gitignore  README.md
js/: README.md  index.d.ts  index.js  package.json
py/: README.md  pyproject.toml
py/generate_uuid_version/: __init__.py  core.py
py/uuid_kit/: __init__.py  core.py
