[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uuid-kit"
version = "1.0.2"
description = "Generate UUID values (v4, v7) with flexible formatting and structured output options."
readme = "README.md"
authors = [
  { name = "Troy Tessalone" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["uuid6>=2024.7.10"]

keywords = [
  "uuid",
  "uuidv4",
  "uuidv7",
  "generator",
  "utility",
  "formatting"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/troytessalone/uuid-kit"
Issues = "https://github.com/troytessalone/uuid-kit/issues"